[package]
name = "bevy-platformer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.6.1", features = ["dynamic"] }
bevy_physimple = { git = "https://github.com/RustyStriker/bevy_physimple.git" }
bevy-inspector-egui = "0.9.0"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
